Font Colors + Fixing Hierarchy and Legibility

--- a/less/internship.less
+++ b/less/internship.less
@@ -3,8 +3,8 @@
 // cd /Users/meganbecker/Documents/Art\ /Interaction/Bootstrap/InternshipInventory
 // grunt watch
 
-body,
-h1,
+bod
+h1 
 h2,
 h3,
 h4,
@@ -19,6 +19,21 @@ h6,
     font-family: "Open Sans", Helvetica, Arial, sans-serif;
 }
 
+.whitetext {
+	color: white;
+	}
+	
+.lightgraytext {
+	color: #e6e7e8;
+	}	
+
+.yellowtext {
+	color: #ecb11f;
+	}
+	
+.darkgraytext {
+	color: #454547;
+	}	
 
 .nav li a {
 	/*color: black;*/
@@ -37,7 +52,7 @@ h6,
 }
 
 a {
-	color: white;
+	color: black;
 	text-decoration: none;
 }
 
@@ -51,11 +66,6 @@ a:active {
 	text-decoration: none;
 }
 	
-.homepage1 {
-	text-align: center;
-	margin-top: 125px;
-	margin-bottom: 50px;
-}
 
 .homepageimage {
 	text-align: center;
@@ -83,43 +93,8 @@ a:active {
 	text-align: center;
 	padding-top: 50px;
 	background-color: rgba(236, 178, 31, .8);
-	color: white;
 	}
 
-.homepage3 {
-	padding-top: 50px;
-	padding-bottom: 50px;
-	background-color: #EFEFEF;
-	}
-	
-.homepage4 {
-	padding-top: 50px;
-	padding-bottom: 50px;
-	background-color: #B0B0B0;
-	text-align: right;
-}
-	
-.homepage5 {
-	padding-top: 50px;
-	padding-bottom: 50px;
-	text-align: left;
-	background-color: #B0B0B0;
-	}	
-		
-	
-.homepage6 {
-	padding-top: 50px;
-	padding-bottom: 50px;
-	text-align: center;
-	background-color: #EFEFEF;
-}	
-
-.homepage7 {
-	padding-top: 50px;
-	padding-bottom: 50px;
-	text-align: left;
-	background-color: #EFEFEF
-}
 
 .bglightgray {
 	background-color: #e6e7e8;
@@ -212,7 +187,7 @@ html, body {
 	}
 	
 .boxed {
-  border: 2px solid black;
+  border: 2px solid white;
   padding: 10px 150px 10px 150px;
   margin-left: 75px;
   margin-right: 75px;
